<resources>
    <string name="app_name">Cartoony</string>
    <string name="drawer_open">Drawer Open</string>
    <string name="drawer_close">Drawer Close</string>

    <string name="tag_line">Amazing video in your way</string>

    <!--Drawer Menu -->
    <string name="menu_home">Home</string>
    <string name="menu_latest">Latest</string>
    <string name="menu_all">All Video</string>
    <string name="menu_category">Category</string>
    <string name="menu_favorite">Favorites</string>
    <string name="menu_share">Share App</string>
    <string name="menu_rate">Rate App</string>
    <string name="menu_more">More App</string>
    <string name="menu_about">About Us</string>
    <string name="menu_privacy">Privacy Policy</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_login">Login</string>
    <string name="menu_logout">Logout</string>
    <string name="menu_video">Video</string>
    <string name="menu_setting">Settings</string>

    <!-- home title -->
    <string name="latest_video">Latest Videos</string>
    <string name="all_video">All Videos</string>
    <string name="latest_category">Category</string>
    <string name="recent_video">Recent Videos</string>
    <string name="more_btn">More</string>
    <string name="total_video">Videos</string>
    <string name="total_category">Categories</string>

    <string name="description_title">Description :-</string>
    <string name="related_video">You may also like</string>
    <string name="comment_video">Comment</string>
    <string name="comment_view_all">View All</string>
    <string name="comment_view_no">No comment found !!</string>
    <string name="leave_comment">Leave comment</string>
    <string name="loading">Loading...</string>
    <string name="logout_msg">Are you sure you want logout ?</string>
    <string name="login_require">Login require !!</string>
    <string name="search_title">Search</string>
    <string name="no_search">No search found !!</string>
    <string name="notification_title">Enable Push Notification</string>
    <string name="notification_dark_mode">Enable Dark Mode</string>

    <string name="no_data">No data found !!</string>
    <string name="no_connect">No internet connect try again !!</string>
    <string name="favourite_add">Favourite has been saved</string>
    <string name="favourite_remove">Favourite has been removed</string>
    <string name="pop_favourite_add">Add to favorite</string>
    <string name="pop_favourite_remove">Removed from favorite</string>
    <string name="pop_report">Report Video</string>
    <string name="report_message">Report Message</string>
    <string name="submit">Submit</string>
    <string name="no_fav">No favorite found !!</string>
    <string name="share_msg">Download it from Google Play Store Free Here</string>
    <string name="restart_msg">Please restart your app something went to wrong</string>
    <string name="license_msg">You are using invalid License or Package name is already in use, for more information contact us: info@viaviweb.com or viaviwebtech@gmail.com</string>

    <!-- more application for play store -->
    <string name="play_more_apps">https://play.google.com/store/apps/dev?id=7157478532572017100</string>
    <string name="privacy_gdpr_url">https://support.google.com/admob/answer/6128543?hl=en</string>
    <string name="admob_app_id">ca-app-pub-3940256099942544~3347511713</string>

    <string name="facebook_app_id">3276647672355471</string>
    <string name="fb_login_protocol_scheme">fb3276647672355471</string>

    <!-- about us -->
    <string name="version">Version</string>
    <string name="author">Author</string>
    <string name="company">Company</string>
    <string name="email">Email</string>
    <string name="website">Website</string>
    <string name="contact">Contact</string>
    <string name="about">About</string>

    <string name="welcome_back">Welcome Back</string>
    <string name="sign_into_continue">Sign in to continue</string>
    <string name="login_email">Email</string>
    <string name="login_password">Password</string>
    <string name="login_confirm_password">Confirm Password</string>
    <string name="login_remember">Remember Me</string>
    <string name="login">Login</string>
    <string name="login_skip">Skip</string>
    <string name="login_register">Register</string>
    <string name="login_update">Update</string>
    <string name="forgot_submit">Submit</string>
    <string name="forgot_title">Forgot Password</string>
    <string name="forgot_password">Forgot Password ?</string>
    <string name="dont_account">Don"&apos;"t have an account ?</string>
    <string name="login_signup">Sign Up</string>
    <string name="sign_up_name">Name</string>
    <string name="sign_up_phone">Phone</string>
    <string name="skip">Skip</string>
    <string name="facebook">Facebook</string>
    <string name="gmail">Gmail</string>
    <string name="already_account_sign_in">Already have an account Yet?</string>
    <string name="your_profile_update">Your Profile Updated</string>
    <string name="error_title">Opps.</string>
    <string name="error_login_failed">Admin disable your login rights</string>
    <string name="comment_require">Comment require..</string>
    <string name="pip_mode">PIP Mode</string>
    <string name="no_url">No url found.</string>
    <string name="pip_not_support">Your device PIP mode not support require oreo(8.0) version</string>
    <string name="button_text_forgot_password">Forgot your password?</string>
    <string name="forgot_description">Enter your email address below and  we\'ll send you email with password</string>
    <string name="please_enter_email">Please enter email</string>
    <string name="send">Send</string>

    <string name="dialog_error">Error..</string>
    <string name="dialog_warning">Warning..</string>
    <string name="dialog_success">Success</string>
    <string name="dialog_ok">OK</string>

    <!-- youtube -->
    <string name="error_player">There was an error initializing the YouTubePlayer (%1$s)</string>
    <string name="youtube_api_key">AIzaSyAYJwy6nzCFqgr5LtihRI3YuVBb_34aprw</string>

    <!--if you want rtl change value of isRTL to true else false-->
    <string name="isRTL">false</string>

    <string name="exit_msg">Are You Sure You Want To Quit?</string>
    <string name="exit_yes">Yes</string>
    <string name="exit_no">No</string>
    <string name="require_report">Report message require</string>

    <string name="exo_msg_oops">Whoops!</string>
    <string name="exo_msg_failed">Failed to load stream, probably the stream server currently down!</string>
    <string name="exo_option_retry">Retry</string>
    <string name="exo_option_no">No</string>

</resources>
