<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_bg">

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:visibility="gone" />

    <ScrollView
        android:id="@+id/lay_scroll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="15dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:contentDescription="@string/app_name"
                    android:src="@drawable/ic_user"
                    android:tint="@color/login_image_bg" />

                <View
                    android:layout_width="0.4dp"
                    android:layout_height="25dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="8dp"
                    android:background="@drawable/login_line" />

                <EditText
                    android:id="@+id/edt_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:background="@drawable/edittext_background"
                    android:hint="@string/sign_up_name"
                    android:inputType="textPersonName"
                    android:textColor="@color/login_edit_text"
                    android:textColorHint="@color/login_edit_text"
                    android:textCursorDrawable="@drawable/cursor_white"
                    android:textSize="16sp" />

            </LinearLayout>

            <include layout="@layout/row_cross_line" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:contentDescription="@string/app_name"
                    android:src="@drawable/ic_email"
                    android:tint="@color/login_image_bg" />

                <View
                    android:layout_width="0.4dp"
                    android:layout_height="25dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="8dp"
                    android:background="@drawable/login_line" />

                <EditText
                    android:id="@+id/edt_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:background="@drawable/edittext_background"
                    android:hint="@string/login_email"
                    android:inputType="textEmailAddress"
                    android:textColor="@color/login_edit_text"
                    android:textColorHint="@color/login_edit_text"
                    android:textCursorDrawable="@drawable/cursor_white"
                    android:textSize="16sp"

                    />

            </LinearLayout>

            <include layout="@layout/row_cross_line" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:contentDescription="@string/app_name"
                    android:src="@drawable/ic_password"
                    android:tint="@color/login_image_bg" />

                <View
                    android:layout_width="0.4dp"
                    android:layout_height="25dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="8dp"
                    android:background="@drawable/login_line" />

                <EditText
                    android:id="@+id/edt_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:background="@drawable/edittext_background"
                    android:hint="@string/login_password"
                    android:inputType="textPassword"
                    android:textColor="@color/login_edit_text"
                    android:textColorHint="@color/login_edit_text"
                    android:textCursorDrawable="@drawable/cursor_white"
                    android:textSize="16sp"

                    />

            </LinearLayout>

            <include layout="@layout/row_cross_line" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:contentDescription="@string/app_name"
                    android:src="@drawable/ic_phone"
                    android:tint="@color/login_image_bg" />

                <View
                    android:layout_width="0.4dp"
                    android:layout_height="25dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="8dp"
                    android:background="@drawable/login_line" />

                <EditText
                    android:id="@+id/edt_phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:background="@drawable/edittext_background"
                    android:hint="@string/sign_up_phone"
                    android:inputType="phone"
                    android:textColor="@color/login_edit_text"
                    android:textColorHint="@color/login_edit_text"
                    android:textCursorDrawable="@drawable/cursor_white"
                    android:textSize="16sp"

                    />

            </LinearLayout>

            <include layout="@layout/row_cross_line" />

            <Button
                android:id="@+id/button"
                fontPath="fonts/Montserrat-SemiBold_0.otf"
                android:layout_width="130dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:layout_marginTop="30dp"
                android:background="@drawable/button_login_background"
                android:text="@string/login_update"
                android:textColor="@color/login_btn_text"
                android:textSize="16sp"
                android:textStyle="bold"
                tools:ignore="MissingPrefix" />


        </LinearLayout>
    </ScrollView>
</RelativeLayout>